testing/macro-tests/tests/ui/schema_version_zero.stderr
error: version must be a positive integer
  --> tests/ui/schema_version_zero.rs:23:12
   |
23 | pub struct ZeroSchemaVersionEntity;
   |            ^^^^^^^^^^^^^^^^^^^^^^^
